Updated LZW to support different files formats.